file/mikeingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-tom
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: www.tom.com
      http:
        paths:
        - path: /
          backend:
            serviceName: canary-tom
            servicePort: 80
